# windows_safe_handle

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: bcrypt_hash.rs
