[package]
name = "windows_safe_handle"
version = "0.1.2"
edition = "2021"
description = "Generate smart pointers for https://crates.io/crates/windows raw handles with ergonomic APIs."
readme = "README.md"
repository = "https://github.com/vsrs/windows_safe_handle"
license = "MIT OR Apache-2.0"

[dependencies]
windows = "0.48"

[dev-dependencies]
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_Graphics_Gdi" # for doc samples
] }
