[package]
name = "windows_safe_handle"
version = "0.2.0"
edition = "2021"
description = "Generate smart pointers for https://crates.io/crates/windows raw handles with ergonomic APIs."
readme = "README.md"
repository = "https://github.com/vsrs/windows_safe_handle"
license = "MIT OR Apache-2.0"
categories = ["os::windows-apis"]

[dependencies]
windows = "0.58"

[dev-dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_Graphics_Gdi" # for doc samples
] }
